// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render SavedBlogs correctly with no props 1`] = `
<DocumentFragment>
  <div>
    <h3
      data-testid="header"
    >
      saved blogs
    </h3>
  </div>
</DocumentFragment>
`;

exports[`Should render SavedBlogs correctly with props 1`] = `
<DocumentFragment>
  <div>
    <h3
      data-testid="header"
    >
      saved blogs
    </h3>
    <div>
      <div>
        BlogItemBlogItemBlogItem
      </div>
    </div>
  </div>
</DocumentFragment>
`;
